--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.applitools.helloworld.android"
         minSdkVersion 15
-        targetSdkVersion 27
+        targetSdkVersion 29
         versionCode 3
         versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "APPLITOOLS_API_KEY", "\"${System.getenv("APPLITOOLS_API_KEY")}\""
+        buildConfigField "String", "APPLITOOLS_SERVER_URL", "\"${System.getenv("APPLITOOLS_SERVER_URL")}\""
     }
     buildTypes {
         release {
@@ -29,7 +31,7 @@ configurations.all {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
