--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,16 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url uri("https://applitools.jfrog.io/artifactory/Android")
+        }
+        maven {
+            url "https://applitools.jfrog.io/artifactory/nmg/android/nmg_lib"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
-        
+        classpath 'com.android.tools.build:gradle:7.1.1'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
