--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 32
     defaultConfig {
         applicationId "com.applitools.helloworld.android"
-        minSdkVersion 15
-        targetSdkVersion 29
+        minSdkVersion 19
+        targetSdkVersion 32
         versionCode 3
         versionName "1.2"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         buildConfigField "String", "APPLITOOLS_API_KEY", "\"${System.getenv("APPLITOOLS_API_KEY")}\""
         buildConfigField "String", "APPLITOOLS_SERVER_URL", "\"${System.getenv("APPLITOOLS_SERVER_URL")}\""
     }
@@ -31,19 +31,20 @@ configurations.all {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    // implementation 'com.applitools:vhs-androidx:'
 
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
 
-    androidTestImplementation 'com.applitools:eyes-android-common:latest.release'
-    androidTestImplementation 'com.applitools:eyes-android-core:latest.release'
-    androidTestImplementation 'com.applitools:eyes-android-components:latest.release@aar'
-    androidTestImplementation 'com.applitools:eyes-android-components-support:latest.release@aar'
-    androidTestImplementation 'com.applitools:eyes-android-espresso:latest.release@aar'
+    androidTestImplementation 'com.applitools:eyes-android-common:4.7.10'
+    androidTestImplementation 'com.applitools:eyes-android-core:4.7.10'
+    androidTestImplementation 'com.applitools:eyes-android-components:4.7.10@aar'
+    androidTestImplementation 'com.applitools:eyes-android-components-support:4.7.10@aar'
+    androidTestImplementation 'com.applitools:eyes-android-espresso:4.7.10@aar'
 
-    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
 }
