--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    // implementation 'com.applitools:vhs-androidx:'
+    // implementation 'com.applitools:vhs-androidx:+'
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     androidTestImplementation 'androidx.test:rules:1.5.0'
@@ -42,7 +42,7 @@ dependencies {
     androidTestImplementation 'com.applitools:eyes-android-common:4.7.10'
     androidTestImplementation 'com.applitools:eyes-android-core:4.7.10'
     androidTestImplementation 'com.applitools:eyes-android-components:4.7.10@aar'
-    androidTestImplementation 'com.applitools:eyes-android-components-support:4.7.10@aar'
+    androidTestImplementation 'com.applitools:eyes-android-components-androidx:4.7.10@aar'
     androidTestImplementation 'com.applitools:eyes-android-espresso:4.7.10@aar'
 
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
