--- a/build.gradle
+++ b/build.gradle
@@ -3,16 +3,12 @@
 buildscript {
     repositories {
         google()
-        jcenter()
-        maven {
-            url uri("https://applitools.jfrog.io/artifactory/Android")
-        }
-        maven {
-            url "https://applitools.jfrog.io/artifactory/nmg/android/nmg_lib"
-        }
+        mavenCentral()
+        maven { url uri("https://applitools.jfrog.io/artifactory/Android") }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'com.applitools:espresso-git-integration:1.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,7 +17,9 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven { url 'https://applitools.jfrog.io/artifactory/Android/' }
+        maven { url 'https://applitools.jfrog.io/artifactory/nmg/android/nmg_lib/' }
     }
 }
 
